[package]
name = "alovak"
version = "0.0.3"
edition = "2021"
authors = ["Uladzislau Charniakou <vlobo2004@gmail.com>"]
build = "build.rs"

[dependencies]
ash = { default-features = false, features = [
    "linked",
    "debug",
], version = "*" }
log = "0.4"
windows = { version = "*", features = [
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
] }
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
casopis = { git = "https://github.com/VloBoo/casopis.git", version = "*" }

[build-dependencies]
naga = {version = "22.1", features = ["glsl-in", "spv-out"]}